修改实验报告

--- a/实验报告.md
+++ b/实验报告.md
@@ -85,6 +85,8 @@
 
    **使用Neo4j图数据库线上版本Neo4j Aura对搜索路径和推荐关系进行存储**。Neo4j提供了云数据库Neo4j Aura及其python支持库neo4j，对电影建立节点并对推荐建立关系可以得到图数据。这里我采集了两张图，搜索路径图（不含重复推荐，无环）和推荐关系图（含重复推荐），如下。可以发现，电影间存在很强的互推荐关系，事实上我从《楚门的世界》进行了深度为8的搜索，理论上一棵满10叉树有10^7^+个节点，而实际搜索只得到173部电影。而与之相比，从《千与千寻》开始的搜索结果甚至更少，只有91部，我认为原因很可能是**动漫电影之间的互推荐关系更强**，导致集合更趋近于封闭。
    
+   在main中修改mode变量为'tree'/'map'进行生成图的选择。
+   
    - 搜索路径图![tree](D:\data analysis and pratice\results\tree.svg)
    
    - 推荐关系图
