修改实验报告

--- a/实验报告.md
+++ b/实验报告.md
@@ -89,9 +89,7 @@
    
    - 搜索路径图![tree](D:\data analysis and pratice\results\tree.svg)
    
-   - 推荐关系图
-
-![map](D:\data analysis and pratice\results\map.svg)
+   - 推荐关系图![map](D:\data analysis and pratice\results\map.svg)
 
 ### Part2 爬取电影对应图片
 
